remove the os import from the yaml file

--- a/.github/workflows/action_flow.yml
+++ b/.github/workflows/action_flow.yml
@@ -25,7 +25,7 @@ jobs:
         apt-get update
         ACCEPT_EULA=Y apt-get install -y msodbcsql18
         pip3 install --upgrade pip setuptools wheel
-        pip3 install --upgrade os pandas requests
+        pip3 install --upgrade pandas requests
 
     - name: Run api_test script
       env:
