--- a/.github/workflows/action_flow.yml
+++ b/.github/workflows/action_flow.yml
@@ -25,7 +25,7 @@ jobs:
         apt-get update
         ACCEPT_EULA=Y apt-get install -y msodbcsql18
         python3 -m pip install --upgrade pip setuptools wheel
-        python3 -m pip install --upgrade pandas requests sqlalchemy pyodbc
+        python3 -m pip install --upgrade pandas requests sqlalchemy pyodbc numpy
 
     - name: Run api_test script
       env:
