Implement schedule every 5 minutes as test

--- a/.github/workflows/action_flow.yml
+++ b/.github/workflows/action_flow.yml
@@ -1,7 +1,8 @@
 name: API Connection Test
 
 on:
-  workflow_dispatch:
+  schedule:
+    - cron: '*/5 * * * *'  # Every 5 minutes
 
 permissions:
   contents: read
